--- a/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2r12_c6h6_multipass.in
+++ b/mpqc/src/bin/mpqc/validate/ref/mbpt_mp2r12_c6h6_multipass.in
@@ -52,6 +52,8 @@ mpqc: (
       name = "cc-pVDZ"
       molecule = $:molecule
     )
+    % this ABS is not complete enough, hence turn off the check
+    safety_check = false
 
     reference<CLHF>: (
       molecule = $:molecule
