1) added Psi CC-R12 tests 2) location of installed Psi is given to configure using --with-psi= 3) (incomplete) handling of multiprocessor runs that use Psi
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408798

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1832,6 +1832,18 @@ fi
 
 dnl ----------- Psi program checks --------------
 
+PSIROOTDIR=
+AC_ARG_WITH(psi,
+[  --with-psi                   Psi root directory (i.e. prefix/bin is location for the binaries)],
+PSIROOTDIR=$withval
+)
+dnl -- find psi3 using given PSIDROOTDIR, do rest of checks only if found --
+AC_CHECK_PROG([VALID_PSIROOTDIR], [psi3], [yes], [no], [$PSIROOTDIR/bin])
+if test X$VALID_PSIROOTDIR = Xyes; then
+AC_SUBST(PSIROOTDIR)
+LIBS="-L$PSIROOTDIR/lib  $LIBS"
+CPPFLAGS="-I$PSIROOTDIR/include $CPPFLAGS"
+
 HAVE_COMPATIBLE_PSI=no
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
@@ -1949,6 +1961,9 @@ if test X$HAVE_LIBPSIO = Xno -o X$HAVE_LIBCHKPT = Xno -o X$HAVE_OTHER_PSILIBS = 
 else
   HAVE_PSIMPQCIFACE=yes
   AC_DEFINE(HAVE_PSIMPQCIFACE)
+  AC_DEFINE_UNQUOTED(PSIROOTDIR, "$PSIROOTDIR")
+fi
+
 fi
 
 dnl --------- Template instantiation. ---------
