exclude the psi directory if the psi installation was not found
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408799

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1966,6 +1966,10 @@ fi
 
 fi
 
+if test X$VALID_PSIROOTDIR = Xno; then
+  EXCLUDED_DIRS="-x SRC_LIB_CHEMISTRY_QC_PSI $EXCLUDED_DIRS"
+fi
+
 dnl --------- Template instantiation. ---------
 
 if test $template_instantiation = auto; then
