--- a/mpqc/src/bin/mpqc/validate/ref/ccamp2r12_mp2r12slashb10ccpvdzccpvdzc2v.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccamp2r12_mp2r12slashb10ccpvdzccpvdzc2v.in
@@ -43,9 +43,9 @@ mpqc: (
     basis = $:basis
     coor = $..:coor
     memory = 32000000
-    stdapprox = "A'"
+    stdapprox = "B"
     corr_factor = "R12"
-    nfzc = 0
+    nfzc = 1
     reference<CLHF>: (
       molecule = $:molecule
       basis = $:basis
