--- a/mpqc/src/bin/mpqc/validate/ref/ccamp2r12_mp2r12slashc00ccpvdzccpvdzc2v.in
+++ b/mpqc/src/bin/mpqc/validate/ref/ccamp2r12_mp2r12slashc00ccpvdzccpvdzc2v.in
@@ -43,7 +43,7 @@ mpqc: (
     basis = $:basis
     coor = $..:coor
     memory = 32000000
-    stdapprox = "A'"
+    stdapprox = "C"
     corr_factor = "R12"
     nfzc = 0
     reference<CLHF>: (
