mpqcrun can pick up nodelist from SGE batch scheduler.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408867

--- a/mpqc/src/bin/mpqc/mpqcrun.in
+++ b/mpqc/src/bin/mpqc/mpqcrun.in
@@ -295,6 +295,9 @@ elsif ("$nodefile" eq "" && exists($ENV{"LSB_MCPU_HOSTS"})) {
         print $y[$i], "\n";
         $nodelist[$#nodelist+1] = $y[$i];
     }
+elsif ("$nodefile" eq "" && exists($ENV{"PE_HOSTFILE"})) {
+    # this will get the nodelist from the SGE batch scheduler
+    $nodefile=$ENV{"PE_HOSTFILE"};
 }
 
 if ("$nodefile" ne "" && -f "$nodefile") {
