--- a/mpqc/src/lib/scconfig.h.in
+++ b/mpqc/src/lib/scconfig.h.in
@@ -111,7 +111,9 @@
 #undef HAVE_SETENV
 
 /* Define if isnan is available from C++.  */
+#ifndef HAVE_ISNAN
 #undef HAVE_ISNAN
+#endif
 
 /* Define if you have the sigfillset function (and company).  */
 #undef HAVE_SIGFILLSET
@@ -124,9 +126,6 @@
 
 /* Define if you have the drand48 function.  */
 #undef HAVE_DRAND48
-
-/* Define if you have the isnan function.  */
-#undef HAVE_ISNAN
 
 /* Define if you have the fchdir function.  */
 #undef HAVE_FCHDIR
