--- a/mpqc/lib/basis/Makefile
+++ b/mpqc/lib/basis/Makefile
@@ -8,7 +8,7 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
 install::
-	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(scdatadir)/basis
+	$(MKINSTALLDIRS) $(installroot)$(scdatadir)/basis
 	$(INSTALL) $(INSTALLLIBOPT) $(SRCDIR)/*.kv $(installroot)$(scdatadir)/basis
 
 install_devel::
