--- a/mpqc/lib/elisp/Makefile
+++ b/mpqc/lib/elisp/Makefile
@@ -8,5 +8,5 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
 install::
-	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(scdatadir)/elisp
+	$(MKINSTALLDIRS) $(installroot)$(scdatadir)/elisp
 	$(INSTALL) $(INSTALLLIBOPT) $(SRCDIR)/*.el $(installroot)$(scdatadir)/elisp
