--- a/mpqc/lib/perl/Makefile
+++ b/mpqc/lib/perl/Makefile
@@ -8,5 +8,5 @@ include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
 install::
-	$(INSTALL) $(INSTALLDIROPT) $(installroot)$(scdatadir)/perl
+	$(MKINSTALLDIRS) $(installroot)$(scdatadir)/perl
 	$(INSTALL) $(INSTALLLIBOPT) $(SRCDIR)/*.pm $(installroot)$(scdatadir)/perl
