MemoryGrpRegion passes initial tests. More testing is underway.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408913

--- a/mpqc/src/lib/util/group/Makefile
+++ b/mpqc/src/lib/util/group/Makefile
@@ -37,7 +37,7 @@ REQUIREDCXXSRC = mstate.cc \
          rnglock.cc memory.cc memmsg.cc pool.cc \
          memamsg.cc memproc.cc \
          pregtime.cc thread.cc memiter.cc memrdma.cc \
-	 actmsg.cc
+	 actmsg.cc memregion.cc
 
 OPTIONALCXXSRC = messmpi.cc memshm.cc \
                  memmtmpi.cc
