Complete - task "Integrate R12IntsAcc with MemoryGrpRegion"
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408919

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -38,7 +38,7 @@ BIN_OR_LIB = LIB
 
 CXXSRCS = mbptr12.cc \
   r12ia.cc \
-  r12ia_node0file.cc \
+  r12ia_node0file.cc r12ia_memgrp.cc \
   vxb_eval_info.cc \
   compute_energy_a.cc mp2r12_energy.cc \
   multipole_ints.cc ri_basis.cc \
