Incomplete - task "Write standalone TransformManager to allow partial transforms, reuse, etc."
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%408935

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1409,6 +1409,7 @@ dnl --------- Checks for rand functions ---------
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 AC_CHECK_FUNCS(drand48)
+AC_CHECK_FUNCS(lrand48)
 AC_LANG_RESTORE
 
 dnl --------- Checks for SYSV IPC. ---------
